--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1> This is a test!</h1>
+  <p>Adding some test text as well...</p>
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
